<resources>
    <string name="app_name">Tip Calculator</string>

    <string name="calculator_fragment_label">Calculator</string>
    <string name="check_amount">Check amount</string>
    <string name="tip_percentage">Tip percentage</string>
    <string name="check">Check</string>
    <string name="tip">Tip</string>
    <string name="total">Total</string>
    <string name="pay">Pay</string>
    <string name="click_to_pay">Click to pay</string>
    <string name="formatted_currency">$ %s</string>
    <string name="dollar_amount">$%1$.2f</string>
</resources>